GVT-1724: Persist element list search parameters into storage and fix element list table header alignments

--- a/ui/src/vayla-design-lib/table/table.scss
+++ b/ui/src/vayla-design-lib/table/table.scss
@@ -18,7 +18,6 @@ $table-cell-padding: 10px 16px;
             @include typography-table-heading;
             background: $color-white-dark;
             padding: $table-cell-padding;
-            text-align: left;
             white-space: break-spaces;
 
             &.table__th--clickable {
@@ -74,8 +73,13 @@ $table-cell-padding: 10px 16px;
     align-content: center;
 }
 
+.table__th--align-left {
+    text-align: left;
+}
+
 .table__th-children {
     zoom: 1;
+    width: 100%;
 }
 
 .table__th-icons {
